03_basic-grid-items-reordering

--- a/01_basic-grid/execution/index.css
+++ b/01_basic-grid/execution/index.css
@@ -13,7 +13,7 @@
   border: 2px solid red;
 }
 
-.grid-container figure:first-child {
+.grid-container figure:nth-child(3) {
   grid-column: 1 / 2;
   grid-row: 1 / 4;
   display: block;
