--- a/06_grid-areas-exercise/execution/index.css
+++ b/06_grid-areas-exercise/execution/index.css
@@ -1,27 +1,29 @@
 .grid-container {
   display: grid;
-  grid-template-columns: 2fr 1fr;
   gap: 1rem;
   width: 980px;
   margin: 0 auto;
+  grid-template-columns: 2fr 1fr;
+  grid-template-areas: 
+  "sol10 sol10"
+  "mars meteorite"
+  "mars microscope"
+  "intrepid intrepid";
 }
 .one {
-  grid-column: 1/3;
+  grid-area: sol10;
 }
 .two {
-  grid-column: 1/2;
-  grid-row: 2/4;
+  grid-area: mars;
 }
 .three {
-  grid-column: 1/3;
+  grid-area: intrepid;
 }
 .four {
-  grid-column: 2/3;
-  grid-row: 2/3;
+  grid-area: meteorite;
 }
 .five {
-  grid-column: 2/3;
-  grid-row: 3/4;
+  grid-area: microscope;
 }
 
 /* extremely basic formatting */
